# vibeshell

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  STYLE.md  TEST_PLAN.md  first_5_commits_roadmap.txt  justfile  roadmap.txt  specification.txt
.github/workflows/: ci.yml
apps/cheatsheet/: Cargo.toml
apps/cheatsheet/src/: main.rs
apps/launcher/: Cargo.toml
apps/launcher/src/: main.rs
apps/notifd/: Cargo.toml
apps/notifd/src/: main.rs
apps/overlay/: Cargo.toml
apps/overlay/src/: interaction.rs  interaction_state.rs  main.rs
apps/overlay/src/ui/: mod.rs  overview_canvas.rs
apps/panel/: Cargo.toml
apps/panel/src/: daemon_source.rs  main.rs
apps/panel/src/status/: mod.rs
apps/panel/src/status/providers/: audio.rs  battery.rs  mod.rs  network.rs
apps/vibeshellctl/: Cargo.toml
apps/vibeshellctl/src/: daemon.rs  main.rs  state_store.rs  state_store_tests.rs  wm_factory.rs
apps/vibewm/: Cargo.toml
apps/vibewm/src/: anim.rs  cursor.rs  gestures.rs  handlers.rs  input.rs  ipc.rs  keybindings.rs  main.rs  model.rs  state.rs  udev.rs  winit.rs  xwayland.rs
apps/vibewm/src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
crates/common/: Cargo.toml
crates/common/src/: contracts.rs  lib.rs  model.rs  panel.rs  persistence.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  schema.rs
crates/gtk-theme/: Cargo.toml  style.css
crates/gtk-theme/src/: lib.rs
crates/sway/: Cargo.toml
crates/sway/src/: backend.rs  lib.rs  sway_backend.rs
crates/wm/: Cargo.toml
crates/wm/src/: backend.rs  facts.rs  layout.rs  lib.rs  vibewm_ipc.rs  wlroots_backend.rs
crates/xdg/: Cargo.toml
crates/xdg/src/: lib.rs
dev/: keybinds.toml.example  sway.bindings.generated  sway.config
docs/: gap-remediation.md  phase4a-verification.md
examples/: config.toml
scripts/: demo  install-ubuntu-login-session  logout-to-login-screen  overlay-interaction-checklist.sh  run-in-nested-sway  smoke-test  smoke-test-wlroots  start-sway-session  start-vibeshell-session
