[workspace]
members = [
  "apps/panel",
  "apps/launcher",
  "apps/notifd",
  "crates/common",
  "crates/config",
  "crates/sway",
  "crates/xdg",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
