[package]
name = "cheatsheet"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../crates/common" }
gtk-theme = { path = "../../crates/gtk-theme" }
tracing.workspace = true
gtk4 = "0.8"
adw = { package = "libadwaita", version = "0.6" }
gtk4-layer-shell = "0.3"

[lints]
workspace = true
