[package]
name = "launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../crates/common" }
xdg = { path = "../../crates/xdg" }
tracing.workspace = true
gtk4 = "0.8"
libadwaita = "0.6"
gtk4-layer-shell = "0.3"
shell-words = "1.1"

[lints]
workspace = true
