[package]
name = "launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
config = { path = "../../crates/config" }
common = { path = "../../crates/common" }
sway = { path = "../../crates/sway" }
xdg = { path = "../../crates/xdg" }
tracing.workspace = true
gtk4 = "0.8"
adw = { package = "libadwaita", version = "0.6" }
gtk4-layer-shell = "0.3"
shell-words = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
