[package]
name = "notifd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
config = { path = "../../crates/config" }
common = { path = "../../crates/common" }
tracing.workspace = true
gtk4 = "0.8"
gtk4-layer-shell = "0.3"
zbus = "4"
zvariant = "4"

[lints]
workspace = true
