[package]
name = "panel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
config = { path = "../../crates/config" }
common = { path = "../../crates/common" }
sway = { path = "../../crates/sway" }
tracing.workspace = true
gtk4 = "0.8"
libadwaita = "0.6"
gtk4-layer-shell = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[lints]
workspace = true
