[package]
name = "vibeshellctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../crates/common" }
config = { path = "../../crates/config" }
clap = { version = "4.5", features = ["derive"] }
swayipc = "3"
tracing.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
