[package]
name = "vibewm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["xwayland"]
# X11 client support via XWayland. Adds smithay's xwayland subsystem +
# Xwayland-spawning + XwmHandler integration. Disable with
# `--no-default-features` for a pure-wayland build.
xwayland = ["smithay/xwayland"]
# DRM/KMS backend (vs the default winit-in-a-window backend). Enables
# vibewm to run as a real session compositor on bare metal or in a VM
# with virtio-gpu. Opt in: `cargo build --features udev`. Selected at
# runtime by `VIBEWM_BACKEND=udev` (default winit) so a build with both
# features picks the right one based on env.
udev = [
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_session_libseat",
]

[dependencies]
common = { path = "../../crates/common" }
wm = { path = "../../crates/wm" }
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.smithay]
version = "0.7"
default-features = false
features = [
    "backend_winit",
    "desktop",
    "renderer_gl",
    "wayland_frontend",
]

# Smithay's calloop `Generic` source requires `unsafe { display.get_mut() }`
# during wayland-server dispatch, and `std::env::set_var` is `unsafe` on newer
# Rust editions. Inheriting the workspace `forbid(unsafe_code)` would prevent
# either, so this crate opts into a `deny` (overridable by-block) instead.
[lints.rust]
unsafe_code = "deny"
